Fic column layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ a:active {
   padding: 15px;
 }
 
+.col {
+  width: 100%;
+}
+
 #hero {
   background-color: #ffe4c4;
   padding: 30px 0;
